hphp/test/zend/bad/ext/gd/tests/imagestring_error2.php
<?php

$result = imagestring(tmpfile(), 1, 5, 5, 'String', 1);

?>